# AxumBackend

./: .env.example  .gitignore  .justfile  Cargo.toml  README.md  README_zh_CN.md  mise.toml
events/: user.surql
migrations/definitions/: _initial.json
mise-tasks/: migration  prepare
schemas/: access_token_claims.surql  account.surql  audit_log.surql  card.surql  cipher.surql  device.surql  folder.surql  group.surql  id.surql  note.surql  organization.surql  refresh_token.surql  refresh_token_claims.surql  ssh.surql  user.surql  vault.surql
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/admin/: mod.rs
src/api/auth/: mod.rs  routers.rs  validation.rs
src/api/health/: mod.rs  routers.rs
src/api/system_owner/: mod.rs
src/api/user/: mod.rs
src/api/vault/: mod.rs
src/app/: mod.rs
src/app/errors/: bootstrap_error.rs  external_error.rs  mod.rs  other_error.rs  user_error.rs  validation_error.rs
src/app/logo/: mod.rs
src/app/response/: mod.rs
src/app/result/: mod.rs
src/app/routers/: mod.rs
src/app/state/: mod.rs
src/domain/: access_token_claims.rs  account.rs  audit_log.rs  card.rs  cipher.rs  device.rs  folder.rs  group.rs  id.rs  identity.rs  login.rs  mod.rs  month.rs  note.rs  organization.rs  project.rs  refresh_token.rs  refresh_token_claims.rs  ssh.rs  user.rs  vault.rs
src/domain/request/: auth.rs
src/infrastructure/: mod.rs
src/middleware/: cors.rs  logger.rs
src/services/: auth_service.rs  health_service.rs  mod.rs  user_service.rs
src/utils/: color_logo.rs  device.rs  jwt.rs  mod.rs  password.rs
(+19 files in other folders)
