[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.3", features = ["cookie"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
figment2 = { version = "0.11.3", features = ["env"] }
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
openssl = "0.10.75"
redis = { version = "1.0.1", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
surrealdb = "2.4.0"
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = { version = "0.1.44", features = ["std"] }
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "registry",
    "std",
] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
once_cell = "1.21.3"
tracing-appender = "0.2.4"
owo-colors = "4.2.3"
colorgrad = "0.8.0"
validator = { version = "0.20.0", features = ["derive"] }
uaparser-rs = "0.1.0"
resend-rs = "0.19.0"
fancy-regex = "0.17.0"
serde_json = "1.0.146"
rustfs = "0.0.2"
aes-gcm = "0.10.3"
